--- a/MinFin.Web/MinFin.Web.csproj
+++ b/MinFin.Web/MinFin.Web.csproj
@@ -8,11 +8,16 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.7"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.14">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\MinFin.DB\MinFin.DB.csproj" />
+      <ProjectReference Include="..\MinFin.ParseService\MinFin.ParseService.csproj" />
       <ProjectReference Include="..\MinFin.Repository\MinFin.Repository.csproj" />
       <ProjectReference Include="..\MinFin.UoW\MinFin.UoW.csproj" />
     </ItemGroup>
