--- a/MinFin.Web/appsettings.json
+++ b/MinFin.Web/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "MinFinDbConnectionString": "Server=.\\; Database=MinFin; Trusted_Connection=True; MultipleActiveResultSets=True; TrustServerCertificate=True"
+    "MinFinDbConnectionString": "Server=.\\; Database=MinFin; Trusted_Connection=True; MultipleActiveResultSets=True; TrustServerCertificate=True",
+    "RestDbConnectionString": "Server=.\\; Database=Rest; Trusted_Connection=True; MultipleActiveResultSets=True; TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
